--- a/MO git/index.html
+++ b/MO git/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="header-wrapper">
 			<div id="header-center">
-				<img src = "images/header-logo.webp" alt = "McNulty Outdoors Logo image">
+				<img src = "Images/header-logo.webp" alt = "McNulty Outdoors Logo image">
 				<div id="contact-button-wrapper">
 					<div class="button-box"><a href="Contact.html">CONTACT US</a></div>
 					<div>516.352.1550</div>
@@ -33,7 +33,7 @@
 	        <li><a href="https://www.pinterest.com/McNultyOutdoors/">Pinterest</a></li>
 	      </ul>
 	    </nav>
-		<img id="group-photo" src="images/Smaller_Group_picture.jpg" alt="McNulty Outdoors Group Photo">
+		<img id="group-photo" src="Images/Smaller_Group_picture.jpg" alt="McNulty Outdoors Group Photo">
 
 		<div id="home-description">
 			<div>
@@ -50,9 +50,9 @@
 	
 	
 	<h1 id="testimonials"> - T E S T I M O N I A L S - </h1>
-	<a id="angieslist" href="https://www.angieslist.com/companylist/us/ny/new-hyde-park/mcnulty-outdoors-inc-reviews-3950692.htm?cid=ssabadge"><img src="images/Angies_list_link.png" alt="Angies List Link"></a><br>
+	<a id="angieslist" href="https://www.angieslist.com/companylist/us/ny/new-hyde-park/mcnulty-outdoors-inc-reviews-3950692.htm?cid=ssabadge"><img src="Images/Angies_list_link.png" alt="Angies List Link"></a><br>
 	<div class="story">
-	<a href="https://www.facebook.com/McNultyOutdoorsInc/"><img src = images/Facebook-icon-preview.png alt = "Facebook logo" height="75px" width="75px"></a>
+	<a href="https://www.facebook.com/McNultyOutdoorsInc/"><img src = Images/Facebook-icon-preview.png alt = "Facebook logo" height="75px" width="75px"></a>
 	<div id="fbeffect">
 	<h2> Check out our <a href="https://www.facebook.com/McNultyOutdoorsInc/">Facebook!</a></h2>
 	</div>
